; ModuleID = '/home/carl/AnghaBench/i3/i3-dump-log/extr_main.c_print_till_end.c'
source_filename = "/home/carl/AnghaBench/i3/i3-dump-log/extr_main.c_print_till_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@logbuffer = common dso_local global i32 0, align 4
@header = common dso_local global %struct.TYPE_2__* null, align 8
@walk = common dso_local global i32 0, align 4
@STDOUT_FILENO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @print_till_end to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_till_end() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @check_for_wrap()
  %3 = load i32, i32* @logbuffer, align 4
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @header, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = add nsw i32 %3, %6
  %8 = load i32, i32* @walk, align 4
  %9 = sub nsw i32 %7, %8
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* @STDOUT_FILENO, align 4
  %11 = load i32, i32* @walk, align 4
  %12 = load i32, i32* %1, align 4
  %13 = call i32 @swrite(i32 %10, i32 %11, i32 %12)
  %14 = load i32, i32* %1, align 4
  %15 = load i32, i32* @walk, align 4
  %16 = add nsw i32 %15, %14
  store i32 %16, i32* @walk, align 4
  ret void
}

declare dso_local i32 @check_for_wrap(...) #1

declare dso_local i32 @swrite(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
